--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,7 @@
-body {
-  background-color: gray;
-}
-
 .face {
   background-color: #E8CDA8;
   width: 10em;
-  height: 13em;
+  height: 14em;
   padding: 1em;
   border-radius: 7em;
 }
@@ -51,34 +47,108 @@ body {
 }
 
 .nose {
-  display: inline-block;
-  width: 2em;
-  height: 3em;
-  margin-top: 2.5em;
-  border-radius: 2em;
-  background-color: white;
-  
+  position: relative;
+  left: 5em;
+  top: 9em;
+  width: 1.5em;
+  height: 2em;
+  background: #efbb80;
+  border-radius: 10em;
+  ;
 }
 
 .nose::after {
-  content: "•";
-  color: white;
-  text-align: center;
-  display: inline-block;
-  width: 2.2em;
-  height: 1.5em;
-  border-radius: 10em;
-  background-color: black;
+  position: relative;
+  left: -10px;
+  top: -7px;
+  content: "\2022";
+  font-size: 1px;
+  background-color: gray;
+  width: 10px;
+  height: 10px;
+  float: left;
+  border-radius: 50%;
+  border-style: solid;
+  border-color: #efbb80;
+  border-width: 8px;
 }
 
 .nose::before {
-  content: "• ";
-  color: white;
-  text-align: center;
+  position: relative;
+  left: 8px;
+  top: 18px;
+  content: "\2022";
+  font-size: 0px;
+  background-color: gray;
+  width: 10px;
+  height: 10px;
+  float: left;
+  border-radius: 50%;
+  border-style: solid;
+  border-color: #efbb80;
+  border-width: 8px;
+}
+
+.mouth {
+  position: relative;
   display: inline-block;
-  width: 2.2em;
-  height: 1.5em;
-  border-radius: 10em;
+  overflow: hidden;
+  width: 70%;
+  height: 50px;
+  top: 170px;
+  left: 55px;
+  background-color: transparent;
+}
+
+.mouth:before {
+  content: "";
+  display: inline-block;
+  top: -50px;
+  width: 100%;
+  height: 200%;
   background-color: black;
-  margin-top: 4em;
+  border-radius: 2em;
+  position: absolute;
+}
+
+.mouth:after {
+  content: "";
+  display: inline-block;
+  width: 35px;
+  height: 20px;
+  background-color: red;
+  border-radius: 30px;
+  position: absolute;
+  left: 2.5em;
+  top: 2em;
+}
+
+.hair::before {
+  position: absolute;
+  top: 4.1em;
+  left: 7em;
+  content: '';
+  border-left: 1em solid transparent;
+  border-right: 1em solid transparent;
+  border-bottom: 1em solid #E8CDA8;
+}
+
+.hair {
+  width: 11em;
+  height: 5em;
+  position: absolute;
+  top: 0px;
+  border-radius: 5em 5em 1em 1em;
+  background: #ffe234;
+}
+
+.marilyn_monroe_mole {
+  position: absolute;
+  content: " ";
+  width: 1em;
+  height: 1em;
+  background-color: brown;
+  border-radius: 100%;
+  top: 10em;
+  left: 9em;
 }
